--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.446.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "^16.0.7",
+    "nodemailer": "^7.0.11",
     "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.16",
